Fixed alignment of web_static house div

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,7 +2,7 @@ header {
   background: white;
   background-image: url("../images/logo.png");
   background-repeat: no-repeat;
-  background-position: left center 20px;
+  background-position: left center;
   border-bottom: 1px solid #CCCCCC;
   height: 70px;
   width: 100%;
